# xdrstream

./: .gitignore  .project  .travis.yml  CMakeLists.txt  README.md
cmake/: MacroGeneratePackageConfigFiles.cmake  xdrstreamConfig.cmake.in  xdrstreamConfig.h.cmake.in  xdrstreamConfigVersion.cmake.in
doc/: CMakeLists.txt  xdrstream_structure.odg
source/include/xdrstream/: Block.h  BufferDevice.h  FileDevice.h  IODevice.h  PointerMapper.h  Record.h  Streamable.h  XdrDefinitions.h  XdrStream.h  XdrStreamInterface.h  xdrstream.h
source/src/: Block.cc  BufferDevice.cc  FileDevice.cc  IODevice.cc  PointerMapper.cc  Record.cc  XdrStream.cc
